--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "api": "npx json-server --watch db.json --port 3001",
+    "start": "concurrently \"npm run api\" \"npm run dev\"",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
@@ -25,11 +26,13 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/tsconfig": "^0.8.1",
+    "concurrently": "^9.2.1",
     "daisyui": "^5.5.17",
     "json-server": "^1.0.0-beta.5",
     "prettier": "^3.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-vue-devtools": "^8.0.6",
     "vue-tsc": "^3.1.4"
   }
 }
